@@ -148,7 +148,7 @@ typedef union sel_union {
   uid_t uid;
   gid_t gid;
   dev_t tty;
-  char  cmd[8];  /* this is _not_ \0 terminated */
+  char  cmd[16];  /* this is _not_ \0 terminated */
 } sel_union;
 
 typedef struct selection_node {
